Added Full Order Functionality and Stripe Payment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,12 @@
   display: flex;
   align-items: center;
 }
+
+#removeBtnDiv:hover {
+  color: red;
+  cursor: pointer;
+}
+
+.row {
+  margin-right: 0px;
+}
