--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -11,3 +11,17 @@
   justify-content: center;
   align-items: center;
 }
+
+.menuItemLink {
+  text-decoration: none;
+  color: black;
+}
+
+.menuItemLink:hover {
+  text-decoration: underline;
+  color: red;
+}
+
+#subcategoryUl li {
+  list-style: none;
+}
