--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -25,3 +25,9 @@
 #subcategoryUl li {
   list-style: none;
 }
+
+#dropdownGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 700px;
+}
