--- a/frontend/src/Pages/HomePage/Home.css
+++ b/frontend/src/Pages/HomePage/Home.css
@@ -15,11 +15,11 @@
 
 #iconTextContainer {
   padding-top: 7px;
+  padding-bottom: 7px;
   text-align: center;
   background-color: rgb(223, 221, 221);
   border-radius: 10px;
   width: 100%;
-  height: 40px;
 }
 
 .activeIcon {
@@ -38,4 +38,14 @@
 
 .icon {
   cursor: pointer;
+}
+
+.slideArrows {
+  cursor: pointer;
+  font-size: 2.5rem !important;
+}
+
+/* This is from Login Page */
+.form-width {
+  width: 400px;
 }
