--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -31,3 +31,20 @@
   grid-template-columns: repeat(3, 1fr);
   width: 700px;
 }
+
+#searchedProductsDiv {
+  border: 1px solid black;
+  position: absolute;
+  top: 90px;
+  background-color: white;
+  z-index: 999;
+  padding: 10px;
+}
+
+#searchedProductsDivMobile {
+  border: 1px solid black;
+  position: static;
+  background-color: white;
+  z-index: 999;
+  padding: 10px;
+}
