--- a/frontend/src/Components/OrderSteps/OrderSteps.css
+++ b/frontend/src/Components/OrderSteps/OrderSteps.css
@@ -15,3 +15,15 @@
   opacity: 100%;
   border: 4px solid;
 }
+
+@media screen and (max-width: 428px) {
+  .div-orb {
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .div-orb {
+    height: 50px;
+  }
+}
